--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     />
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
   </head>
 
   <body>
@@ -296,7 +297,7 @@
         <hr width="120px" />
         <hr width="80px" />
         <div class="cards-container">
-          <div class="card card1">
+          <div class="card">
             <div class="triangle"></div>
             <div class="card-content">
               <div class="img">
@@ -320,30 +321,10 @@
               </div>
             </div>
           </div>
-          <div class="card card2">
-            <div class="triangle"></div>
-            <div class="card-content">
-              <div class="img">
-                <img src="./assets/images/feedback.jpg" alt="person" />
-              </div>
-              <div class="text">
-                <p class="name">Alex Ander</p>
-                <i class="fa-brands fa-facebook-f"></i>
-                <span class="location">United</span>
-                <p class="feedback-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Quaerat aliquam esse iusto reiciendis.
-                </p>
-                <div class="stars">
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-facebook-f"></i>
-                </div>
-              </div>
-            </div>
-          </div>
+        </div>
+        <div class="circles">
+          <div class="circle-border"></div>
+          <div class="circle-solid"></div>
         </div>
       </div>
     </div>
