converted the website to responsive but missing little changes

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <li class="list-item"><a href="" class="">Testinomial</a></li>
         <li class="list-item"><a href="" class="">Blog</a></li>
         <li class="list-item"><a href="" class="">Contact</a></li>
+        <li class="list-item menu-icon">
+          <i class="fa-solid fa-bars"></i>
+        </li>
       </ul>
       <div class="clearfix"></div>
     </div>
@@ -50,7 +53,7 @@
           <span class="hello">Hello I'm</span>
           <h1 class="alex-smith">ALEX SMITH</h1>
           <h2 class="animated-title">
-            Professional Web
+            <span class="static">Professional Web</span>
             <span class="animated-word1">Developer </span>
             <span class="animated-word2">Designer </span>
             <div class="clearfix"></div>
@@ -62,7 +65,7 @@
     <!-- About Section -->
     <div class="about-section section">
       <div class="container">
-        <div class="left-column">
+        <div class="left-column sm-100 md-33 lg-33">
           <div class="square">
             <div class="image">
               <img
@@ -82,7 +85,7 @@
             </div>
           </div>
         </div>
-        <div class="right-column">
+        <div class="right-column sm-100 md-66 about-section">
           <span class="hello">HELLO,</span>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -95,12 +98,22 @@
           </p>
           <hr />
           <ul class="info-list">
-            <li class="list-item"><span>Name: </span>Rdam smith</li>
-            <li class="list-item"><span>Job Title: </span>UI/UX Designer</li>
-            <li class="list-item"><span>Age: </span>26 Year</li>
-            <li class="list-item"><span>Location: </span>United States, US</li>
-            <li class="list-item"><span>Freelance: </span>Available</li>
-            <li class="list-item">
+            <li class="list-item lg-50 md-50 sm-100">
+              <span>Name: </span>Rdam smith
+            </li>
+            <li class="list-item lg-50 md-50 sm-100">
+              <span>Job Title: </span>UI/UX Designer
+            </li>
+            <li class="list-item lg-50 md-50 sm-100">
+              <span>Age: </span>26 Year
+            </li>
+            <li class="list-item lg-50 md-50 sm-100">
+              <span>Location: </span>United States, US
+            </li>
+            <li class="list-item lg-50 md-50 sm-100">
+              <span>Freelance: </span>Available
+            </li>
+            <li class="list-item lg-50 md-50 sm-100">
               <span>E-mail: </span
               ><a href="example@gmail.com">example@gmail.com</a>
             </li>
@@ -125,7 +138,7 @@
         <hr width="120px" />
         <hr width="80px" />
         <div class="cards-container">
-          <div class="card">
+          <div class="card lg-25 md-50 sm-100">
             <i class="fa-brands fa-facebook-f"></i>
             <br />
             <span>UI/UX DESIGN </span>
@@ -134,7 +147,7 @@
               adipisci mollitia quis necstatibus.
             </p>
           </div>
-          <div class="card">
+          <div class="card lg-25 md-50 sm-100">
             <i class="fa-brands fa-facebook-f"></i>
             <br />
             <span>UI/UX DESIGN </span>
@@ -143,7 +156,7 @@
               adipisci mollitia quis necstatibus.
             </p>
           </div>
-          <div class="card">
+          <div class="card lg-25 md-50 sm-100">
             <i class="fa-brands fa-facebook-f"></i>
             <br />
             <span>UI/UX DESIGN </span>
@@ -152,7 +165,7 @@
               adipisci mollitia quis necstatibus.
             </p>
           </div>
-          <div class="card">
+          <div class="card lg-25 md-50 sm-100">
             <i class="fa-brands fa-facebook-f"></i>
             <br />
             <span>UI/UX DESIGN </span>
@@ -168,12 +181,20 @@
     <!-- Portfolio Section -->
     <div class="portfolio-section section">
       <div class="container">
-        <h2 class="title">Our Services</h2>
+        <h2 class="title">Our Portfolio</h2>
         <hr width="80px" />
         <hr width="120px" />
         <hr width="80px" />
+        <div class="sorting">
+          <ul class="sorting-list">
+            <a href=""><li class="list-item selected">ALL</li></a>
+            <a href=""><li class="list-item">GRAPGIC</li> </a>
+            <a href=""><li class="list-item">WEB DESIGN</li></a>
+            <a href=""><li class="list-item">BRANDING</li></a>
+          </ul>
+        </div>
         <div class="cards-container">
-          <div class="card">
+          <div class="card lg-33 md-50 sm-100">
             <a href="">
               <div class="image-container">
                 <img
@@ -187,7 +208,7 @@
               </div>
             </a>
           </div>
-          <div class="card">
+          <div class="card lg-33 md-50 sm-100">
             <a href="">
               <div class="image-container">
                 <img
@@ -201,7 +222,7 @@
               </div>
             </a>
           </div>
-          <div class="card">
+          <div class="card lg-33 md-50 sm-100">
             <a href="">
               <div class="image-container">
                 <img
@@ -215,7 +236,7 @@
               </div>
             </a>
           </div>
-          <div class="card">
+          <div class="card lg-33 md-50 sm-100">
             <a href="">
               <div class="image-container">
                 <img
@@ -229,7 +250,7 @@
               </div>
             </a>
           </div>
-          <div class="card">
+          <div class="card lg-33 md-50 sm-100">
             <a href="">
               <div class="image-container">
                 <img
@@ -243,7 +264,7 @@
               </div>
             </a>
           </div>
-          <div class="card">
+          <div class="card lg-33 md-50 sm-100">
             <a href="">
               <div class="image-container">
                 <img
@@ -265,22 +286,22 @@
     <!-- Numbers Section -->
     <div class="number-section section">
       <div class="container">
-        <div class="card">
+        <div class="card lg-25 md-25 sm-100">
           <i class="fa-brands fa-facebook-f"></i>
           <p class="number">200</p>
           <p class="description">Team Members</p>
         </div>
-        <div class="card">
+        <div class="card lg-25 md-25 sm-100">
           <i class="fa-brands fa-facebook-f"></i>
           <p class="number">200</p>
           <p class="description">Team Members</p>
         </div>
-        <div class="card">
+        <div class="card lg-25 md-25 sm-100">
           <i class="fa-brands fa-facebook-f"></i>
           <p class="number">200</p>
           <p class="description">Team Members</p>
         </div>
-        <div class="card">
+        <div class="card lg-25 md-25 sm-100">
           <i class="fa-brands fa-facebook-f"></i>
           <p class="number">200</p>
           <p class="description">Team Members</p>
@@ -297,13 +318,13 @@
         <hr width="120px" />
         <hr width="80px" />
         <div class="cards-container">
-          <div class="card">
+          <div class="card lg-70 md-100 sm-100">
             <div class="triangle"></div>
             <div class="card-content">
-              <div class="img">
+              <div class="img lg-15 md-15 sm-100">
                 <img src="./assets/images/feedback.jpg" alt="person" />
               </div>
-              <div class="text">
+              <div class="text lg-70 md-70 sm-100">
                 <p class="name">Alex Ander</p>
                 <i class="fa-brands fa-facebook-f"></i>
                 <span class="location">United</span>
@@ -337,7 +358,7 @@
         <hr width="120px" />
         <hr width="80px" />
         <div class="cards-container">
-          <div class="card">
+          <div class="card lg-33 md-33 sm-100">
             <div class="card-image">
               <a href="">
                 <img src="./assets/images/blog/12.jpg" alt="woman standing" />
@@ -356,8 +377,14 @@
               </a>
             </div>
           </div>
-          <div class="card">
+          <div class="card lg-33 md-33 sm-100">
             <div class="card-image">
+              <img
+                style="opacity: 0"
+                src="./assets/images/blog/12.jpg"
+                alt="woman standing"
+              />
+
               <a href="">
                 <iframe
                   src="https://www.youtube.com/embed/uVju5--RqtY?si=jzD8DLmP0vssJRc5"
@@ -382,7 +409,7 @@
               </a>
             </div>
           </div>
-          <div class="card">
+          <div class="card lg-33 md-33 sm-100">
             <div class="card-image">
               <a href="">
                 <img src="./assets/images/blog/32.jpg" alt="woman standing" />
@@ -413,18 +440,32 @@
         <hr width="80px" />
         <hr width="120px" />
         <hr width="80px" />
-        <div class="form">
+        <div class="form lg-50 md-100 sm-100">
           <form action="">
-            <input type="text" placeholder="Name" id="name" />
-            <input type="text" placeholder="Email" id="email" />
-            <br /><br />
+            <div class="name-mail">
+              <input
+                class="lg-50 md-50 sm-100"
+                name="name"
+                type="text"
+                placeholder="Name"
+                id="name"
+              />
+              <input
+                class="lg-50 md-50 sm-100"
+                name="email"
+                type="email"
+                placeholder="Email"
+                id="email"
+              />
+            </div>
+
+            <br />
             <input type="text" placeholder="Subject" id="subject" />
             <br /><br />
             <textarea
               name="message"
               id="message"
               cols="90"
-              id="message"
               placeholder="Message for me"
             ></textarea>
             <!-- <input type="" placeholder="" id="message" /> -->
